BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/BMS_EMEA_BatchMeeting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Country settings for meeting start date notification</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for data migrations with VEM</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Notification_2_Delay__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Delay for 2nd email reminder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notification_delay__c</fullName>
        <defaultValue>14</defaultValue>
        <label>Delay for 1st email reminder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BMS EMEA Batch Meeting notification</label>
</CustomObject>